fixing aligning items in a div inside buttons

--- a/client/src/Pages/Trainer.css
+++ b/client/src/Pages/Trainer.css
@@ -84,6 +84,7 @@
   margin-bottom: 5px !important;
   margin-left: 2px !important ;
   margin-right: 2px !important;
+  height: 50px;
   top: 813px;
   /*   width: 154px;
   height: 86px; */
